--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "expo": "~48.0.15",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-permissions": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-camera": "^4.2.1",
+    "react-native-scan-barcode": "^3.1.7",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
