--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-scan-barcode": "^3.1.7",
     "react-native-vector-icons": "^9.2.0"
   },
